# ETL-1000euros

./: .gitignore  README.md
1-get-new-podcast/: Dockerfile  pom.xml
1-get-new-podcast/src/main/java/com/milleuros/: App.java  PodcastHandler.java
2-get-podcast-metadata/: Dockerfile  pom.xml
2-get-podcast-metadata/src/main/java/com/milleuros/: App.java  CustomConsumerRMQ.java  MetadataExtract.java  RegexMatchValue.java
2-get-podcast-metadata/src/main/resources/: log4j2.xml
2-get-podcast-metadata/src/test/java/com/milleuros/: MetadataExtractTest.java
3-download-podcast-audio/: Dockerfile  pom.xml
3-download-podcast-audio/src/main/java/com/milleuros/: App.java
3-download-podcast-audio/src/test/java/com/milleuros/: AppTest.java
4-transcript-podcast-audio/: Dockerfile  requirements.txt
4-transcript-podcast-audio/src/main/: main.py
4-upload-podcast-audio/: Dockerfile  pom.xml
5-insert-podcast/: Dockerfile  pom.xml
5-transcript-send-email/: pom.xml
airflow/: compose.yaml
airflow/dags/: milleuros.py
images/: ETL_schema.excalidraw
lib/java/database/: pom.xml
lib/java/hdfs/: pom.xml
lib/java/http/: pom.xml
lib/java/podcast/: pom.xml
lib/java/rabbitmq/: pom.xml
lib/python/podcast/: pyproject.toml
lib/python/podcast/podcast/: Podcast.py  __init__.py
lib/python/rabbitmq/: pyproject.toml
lib/python/rabbitmq/rabbitmq/: Consumer.py  Publisher.py  __init__.py
lib/python/utility/: pyproject.toml
lib/python/utility/utility/: Config.py  __init__.py
setup/: ddl.sql  docker-compose.yml  rabbitmq.conf
(+18 files in other folders)
