[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podcast"]

[project]
name = "podcast"
version = "0.0.1"
authors = [
  { name="Markov", email="example@markov.cow" },
]
description = "Custom podcast class"
readme = "README.md"
dependencies = [
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]

[project.urls]
Homepage = "https://github.com/markov-ngz/python-packages"
Issues = "https://github.com/markov-ngz/python-packages"